# Euphorbe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.bat
Editor/: CMakeLists.txt  imgui.ini
Editor/Assets/: FragmentShader.glsl  VertexShader.glsl
Editor/Assets/Configs/: DefaultConfig.toml
Editor/Assets/EnvMaps/SnowyHillside/: 1k.hdr
Editor/Assets/Materials/: BRDFMaterial.toml  EquirectangularCubemapMaterial.toml  FXAAMaterial.toml  GeometryMaterial.toml  HDRMaterial.toml  IrradianceMaterial.toml  MeshGeometryMaterial.toml  MeshMaterial.toml  PrefilterMaterial.toml  RectangleMaterial.toml  SkyboxMaterial.toml  TonemappingMaterial.toml
Editor/Assets/Models/: Cerberus.gltf  Cube.gltf  Sphere.gltf
Editor/Assets/Shaders/: FragmentShader.glsl  VertexShader.glsl
Editor/Assets/Shaders/BRDF/: Compute.glsl
Editor/Assets/Shaders/EquirectangularCubemap/: Compute.glsl
Editor/Assets/Shaders/FXAA/: Fragment.glsl  Vertex.glsl
Editor/Assets/Shaders/Geometry/: Fragment.glsl  Mesh.glsl  MeshFragment.glsl  Task.glsl  Vertex.glsl
Editor/Assets/Shaders/HDR/: Fragment.glsl  Vertex.glsl
Editor/Assets/Shaders/Irradiance/: Compute.glsl
Editor/Assets/Shaders/Prefilter/: Compute.glsl
Editor/Assets/Shaders/Skybox/: Fragment.glsl  Vertex.glsl
Editor/Assets/Shaders/Tonemapping/: Fragment.glsl
Editor/Source/: Editor.c  Editor.h  EditorCamera.c  EditorCamera.h  ViewportPanel.c  ViewportPanel.h  main.c
Editor/Source/Panels/: ViewportPanel.c  ViewportPanel.h
Editor/Source/RenderNodes/: FXAANode.c  FXAANode.h  FinalBlitNode.c  FinalBlitNode.h  GeometryNode.c  GeometryNode.h  HDRNode.c  HDRNode.h  TonemappingNode.c  TonemappingNode.h
Sandbox/: CMakeLists.txt
Sandbox/Assets/: FragmentShader.glsl  VertexShader.glsl
Sandbox/Editor/: main.c
src/: CMakeLists.txt
src/Euphorbe/: Euphorbe.h
src/Euphorbe/Core/: CVar.c  CVar.h  Common.h  Log.c  Log.h  Map.c  Map.h  Vector.h
src/Euphorbe/Graphics/: Buffer.c  Buffer.h  CommandBuffer.c  CommandBuffer.h  GPUProfiler.c  GPUProfiler.h  Image.c  Image.h  Material.c  Material.h  Mesh.c  Mesh.h  RenderGraph.c  RenderGraph.h  Renderer.c  Renderer.h  ShaderCompiler.c  ShaderCompiler.h
src/Euphorbe/Graphics/Vulkan/: ExternalBuilds.cpp  VulkanBuffer.c  VulkanBuffer.h  VulkanCommandBuffer.c  VulkanCommandBuffer.h  VulkanGPUProfiler.c  VulkanGPUProfiler.h  VulkanImage.c  VulkanImage.h  VulkanMaterial.c  VulkanMaterial.h  VulkanRenderer.c  VulkanRenderer.h
src/Euphorbe/Math/: Math.c  Math.h  Types.h
src/Euphorbe/Platform/: FileSystem.c  FileSystem.h  Input.c  Input.h  Timer.c  Timer.h  Window.c  Window.h
src/Euphorbe/Platform/Windows/: WindowsFileSystem.c  WindowsFileSystem.h  WindowsInput.c  WindowsInput.h  WindowsTimer.c  WindowsTimer.h  WindowsWindow.c  WindowsWindow.h
src/Euphorbe/Resource/: Resource.c  Resource.h
